# intelli-app

./: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml  releases.yml
src/: App.tsx  IntelliApp.tsx  index.tsx  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Titlebar/: index.css  index.tsx
src/pages/: App.tsx  Standings.tsx
src/router/: AppRouter.tsx
