[package]
name = "intelli-app"
version = "0.1.0"
description = "Intelli telemetry App"
authors = ["GPeaky <gerardjoven2020@homtmail.com>"]
license = ""
repository = "https://github.com/GPeaky/intelli-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
# panic = "abort"
