[package]
name = "intelli-app"
version = "0.1.0"
description = "Intelli telemetry App"
authors = ["GPeaky <gerardjoven2020@homtmail.com>"]
license = ""
repository = "https://github.com/GPeaky/intelli-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = "1.0"
window-shadows = "0.2.2"
tauri-plugin-shell = "2.0.0-alpha"
tauri-plugin-updater = "2.0.0-alpha"
tauri = { version = "2.0.0-alpha", features = [] }
serde = { version = "1.0", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = 0
lto = "fat"
opt-level = 3
codegen-units = 1
split-debuginfo = "off"
panic = "abort"
